--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -9,24 +9,10 @@
     android:fitsSystemWindows="true"
     >
 
-  <TextView
-      android:id="@+id/title"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:focusable="true"
-      android:clickable="true"
-      android:textSize="30sp"
-      android:textStyle="bold"
-      android:text="@string/call_notifier_title"
-      />
-
   <Button
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
-      app:layout_constraintTop_toBottomOf="@id/title"
+      app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
 
@@ -34,5 +20,15 @@
       android:text="Send test mail"
       android:onClick="sendTestMail"
       />
-  
+
+  <androidx.fragment.app.FragmentContainerView
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/settings_container"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toBottomOf="@id/send_test_mail"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
