--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -9,11 +9,26 @@
     android:fitsSystemWindows="true"
     >
 
+  <TextView
+      android:id="@+id/title"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:focusable="true"
+      android:clickable="true"
+      android:textSize="30sp"
+      android:textStyle="bold"
+      android:text="@string/call_notifier_title"
+      />
+
   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/settings_container"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/title"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       />
